securitygroups.tf
resource "aws_security_group" "ec2_sg" {
  name        = "from_terraform_allow_ssh_and_http"
  description = "Allow SSh and HTTP"
  vpc_id      = "vpc-0de121ec0ecf8eeb6"

  ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Allow SSh_HTTP"
  }

}
